--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,20 @@
-node_modules/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# environment variables
 .env
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# misc
 .DS_Store
-*.log
-dist/
-.cache/
+.netlify
