--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,22 @@
 [build]
   publish = "/"
-  command = ""
+  command = "npm install"
 
 [build.environment]
   NODE_VERSION = "16"
 
 [[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+[functions]
+  directory = "functions"
 
 [headers]
   # Define which paths this specific [[headers]] block will cover.
