--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-  publish = "/"
   command = "npm install"
+  functions = "functions"
+  publish = "/"
 
 [build.environment]
   NODE_VERSION = "16"
@@ -17,6 +18,7 @@
 
 [functions]
   directory = "functions"
+  node_bundler = "esbuild"
 
 [headers]
   # Define which paths this specific [[headers]] block will cover.
@@ -28,3 +30,6 @@
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
     Content-Security-Policy = "default-src 'self' 'unsafe-inline' 'unsafe-eval' https:; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://api.hyperbolic.xyz;"
+
+[dev]
+  framework = "#static"
