--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "build": "netlify-lambda build functions",
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@netlify/functions": "^2.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.11.2",
+    "express-rate-limit": "^6.7.0",
     "node-fetch": "^2.6.9"
   },
   "devDependencies": {
+    "netlify-lambda": "^2.0.15",
     "nodemon": "^2.0.22"
   }
 }
